import React from 'react';
import { render } from '../../utils/test'
import Table, { TableHead, TableBody, TableFooter, TableRow, TableCell } from './index';

describe('Render Table component', () => {
	test('Table with caption and footer', () => {
		const { asFragment } = render(
      <Table caption="Table caption">
				<TableHead>
					<TableRow>
						<TableCell type="th">Header with footnote <sup>1</sup></TableCell>
					</TableRow>
				</TableHead>
				<TableBody>
					<TableRow>
						<TableCell>Value</TableCell>
					</TableRow>
				</TableBody>
				<TableFooter>
					<TableRow>
						<TableCell>
							<sup>1</sup> Footnote description
						</TableCell>
					</TableRow>
				</TableFooter>
			</Table>
    );
		expect(asFragment()).toMatchSnapshot();
	});

	test('Table without caption and footer', () => {
		const { asFragment } = render (
			<Table>
				<TableHead>
					<TableRow>
						<TableCell type="th">Header</TableCell>
					</TableRow>
				</TableHead>
				<TableBody>
					<TableRow>
						<TableCell>Value</TableCell>
					</TableRow>
				</TableBody>
			</Table>
		)
		expect(asFragment()).toMatchSnapshot();
	})

	test('Table cell alignment', () => {
		const { asFragment } = render (
			<Table>
				<TableHead>
					<TableRow>
						<TableCell type="th">Header value</TableCell>
						<TableCell type="th" align="right">Header right</TableCell>
						<TableCell type="th" />
					</TableRow>
				</TableHead>
				<TableBody>
					<TableRow>
						<TableCell>Value</TableCell>
						<TableCell align="right">500</TableCell>
						<TableCell align="center">Center</TableCell>
					</TableRow>
				</TableBody>
			</Table>
		)
		expect(asFragment()).toMatchSnapshot();
	})
});
